{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 373,
  "lineage": "df885df6-e237-600b-e8c9-fe849e270a83",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b972fec07f1e659",
            "arn": "arn:aws:ec2:us-east-1:802803423954:instance/i-0a14869adc8dd3755",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a14869adc8dd3755",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0487aad9c17676f06",
            "private_dns": "ip-10-0-1-83.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.83",
            "public_dns": "ec2-3-82-146-7.compute-1.amazonaws.com",
            "public_ip": "3.82.146.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08138a98601892a70",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-073c412976640ef3d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b0b34ff065920482",
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-073c412976640ef3d"
            ]
          },
          "dependencies": [
            "module.access_ip.data.external.myipaddr",
            "module.compute.aws_key_pair.bastion_key",
            "module.compute.data.aws_ami.amzlinux2",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security-groups.aws_security_group.bastion_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b972fec07f1e659",
            "arn": "arn:aws:ec2:us-east-1:802803423954:instance/i-0b9897284cf3d7335",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b9897284cf3d7335",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0245a20ab4999619f",
            "private_dns": "ip-10-0-11-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-034a9bd5e5b9c2833",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0972491a9e743ca5a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fd074a4464fda4e",
            "tags": {
              "Name": "webserver-0"
            },
            "tags_all": {
              "Name": "webserver-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0972491a9e743ca5a"
            ]
          },
          "dependencies": [
            "module.access_ip.data.external.myipaddr",
            "module.compute.data.aws_ami.amzlinux2",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security-groups.aws_security_group.alb_sg",
            "module.security-groups.aws_security_group.bastion_sg",
            "module.security-groups.aws_security_group.webserver_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b972fec07f1e659",
            "arn": "arn:aws:ec2:us-east-1:802803423954:instance/i-0b08c59f16883c490",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b08c59f16883c490",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0116239c55c38ac2e",
            "private_dns": "ip-10-0-22-102.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.22.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0174df140326ef108",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0972491a9e743ca5a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0939fe441ddee6169",
            "tags": {
              "Name": "webserver-1"
            },
            "tags_all": {
              "Name": "webserver-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0972491a9e743ca5a"
            ]
          },
          "dependencies": [
            "module.access_ip.data.external.myipaddr",
            "module.compute.data.aws_ami.amzlinux2",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security-groups.aws_security_group.alb_sg",
            "module.security-groups.aws_security_group.bastion_sg",
            "module.security-groups.aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:802803423954:loadbalancer/app/application-lb/7b196022bf39b443",
            "arn_suffix": "app/application-lb/7b196022bf39b443",
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-lb-1415221814.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:802803423954:loadbalancer/app/application-lb/7b196022bf39b443",
            "idle_timeout": 400,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b99d8aa61756b48d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00fd074a4464fda4e"
              },
              {
                "subnet_id": "subnet-0939fe441ddee6169"
              }
            ],
            "subnets": [
              "subnet-00fd074a4464fda4e",
              "subnet-0939fe441ddee6169"
            ],
            "vpc_id": "vpc-05a72828468415e2d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security-groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:802803423954:listener/app/application-lb/7b196022bf39b443/946aa1d1afe28867",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:802803423954:targetgroup/lb-tg/39a80a555a45c1bc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:802803423954:listener/app/application-lb/7b196022bf39b443/946aa1d1afe28867",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:802803423954:loadbalancer/app/application-lb/7b196022bf39b443",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.alb",
            "module.load_balancer.aws_lb_target_group.webservers_tg",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security-groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webservers_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:802803423954:targetgroup/lb-tg/39a80a555a45c1bc",
            "arn_suffix": "targetgroup/lb-tg/39a80a555a45c1bc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:802803423954:targetgroup/lb-tg/39a80a555a45c1bc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05a72828468415e2d"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:802803423954:targetgroup/lb-tg/39a80a555a45c1bc-20221206041232370500000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:802803423954:targetgroup/lb-tg/39a80a555a45c1bc",
            "target_id": "i-0b9897284cf3d7335"
          },
          "dependencies": [
            "module.access_ip.data.external.myipaddr",
            "module.compute.aws_instance.webservers",
            "module.compute.data.aws_ami.amzlinux2",
            "module.load_balancer.aws_lb_target_group.webservers_tg",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security-groups.aws_security_group.alb_sg",
            "module.security-groups.aws_security_group.bastion_sg",
            "module.security-groups.aws_security_group.webserver_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:802803423954:targetgroup/lb-tg/39a80a555a45c1bc-20221206041232487800000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:802803423954:targetgroup/lb-tg/39a80a555a45c1bc",
            "target_id": "i-0b08c59f16883c490"
          },
          "dependencies": [
            "module.access_ip.data.external.myipaddr",
            "module.compute.aws_instance.webservers",
            "module.compute.data.aws_ami.amzlinux2",
            "module.load_balancer.aws_lb_target_group.webservers_tg",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.security-groups.aws_security_group.alb_sg",
            "module.security-groups.aws_security_group.bastion_sg",
            "module.security-groups.aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08883b95992f9bf29",
            "domain": "vpc",
            "id": "eipalloc-08883b95992f9bf29",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-192-19-60.compute-1.amazonaws.com",
            "public_ip": "34.192.19.60",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "DEV",
              "Name": "main-us-east-1a"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "main-us-east-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802803423954:internet-gateway/igw-0ad209a52091764ea",
            "id": "igw-0ad209a52091764ea",
            "owner_id": "802803423954",
            "tags": {
              "Environment": "DEV",
              "Name": "main"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "main"
            },
            "vpc_id": "vpc-05a72828468415e2d"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08883b95992f9bf29",
            "connectivity_type": "public",
            "id": "nat-00665ff51356eb8aa",
            "network_interface_id": "eni-02c7de935f6ebb857",
            "private_ip": "10.0.1.202",
            "public_ip": "34.192.19.60",
            "subnet_id": "subnet-0b0b34ff065920482",
            "tags": {
              "Environment": "DEV",
              "Name": "main-us-east-1a"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "main-us-east-1a"
            }
          },
          "dependencies": [
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802803423954:network-acl/acl-03cd3cc05ae5e0298",
            "egress": [],
            "id": "acl-03cd3cc05ae5e0298",
            "ingress": [],
            "owner_id": "802803423954",
            "subnet_ids": [
              "subnet-00fd074a4464fda4e",
              "subnet-0939fe441ddee6169"
            ],
            "tags": {
              "Environment": "DEV",
              "Name": "main-private"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "main-private"
            },
            "vpc_id": "vpc-05a72828468415e2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802803423954:network-acl/acl-07d1af0b87f849c7e",
            "egress": [],
            "id": "acl-07d1af0b87f849c7e",
            "ingress": [],
            "owner_id": "802803423954",
            "subnet_ids": [
              "subnet-04f8a07840850a52d",
              "subnet-0b0b34ff065920482"
            ],
            "tags": {
              "Environment": "DEV",
              "Name": "main-public"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "main-public"
            },
            "vpc_id": "vpc-05a72828468415e2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "65.186.13.143/32",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2083935192",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03cd3cc05ae5e0298",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.access_ip.data.external.myipaddr",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-5731843",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03cd3cc05ae5e0298",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.access_ip.data.external.myipaddr",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2075176238",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03cd3cc05ae5e0298",
            "protocol": "-1",
            "rule_action": "deny",
            "rule_number": 300,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.access_ip.data.external.myipaddr",
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3989872362",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-03cd3cc05ae5e0298",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_network_acl.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "65.186.13.143/32",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1949977101",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-07d1af0b87f849c7e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.access_ip.data.external.myipaddr",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-140210134",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-07d1af0b87f849c7e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.access_ip.data.external.myipaddr",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-445928803",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-07d1af0b87f849c7e",
            "protocol": "-1",
            "rule_action": "deny",
            "rule_number": 300,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.access_ip.data.external.myipaddr",
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2731999284",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-07d1af0b87f849c7e",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_network_acl.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fa239cc15a2683181080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00665ff51356eb8aa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fa239cc15a268318",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_eip.nat",
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_nat_gateway.this",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ad209a52091764ea",
            "id": "r-rtb-02576314e0665d3eb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02576314e0665d3eb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802803423954:route-table/rtb-0fa239cc15a268318",
            "id": "rtb-0fa239cc15a268318",
            "owner_id": "802803423954",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "DEV",
              "Name": "main-private"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "main-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a72828468415e2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802803423954:route-table/rtb-02576314e0665d3eb",
            "id": "rtb-02576314e0665d3eb",
            "owner_id": "802803423954",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "DEV",
              "Name": "main-public"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "main-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a72828468415e2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4657c0d0edeb26b",
            "route_table_id": "rtb-0fa239cc15a268318",
            "subnet_id": "subnet-0dc822966d95f4959"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0a94663c7886c62",
            "route_table_id": "rtb-0fa239cc15a268318",
            "subnet_id": "subnet-0fe581f1deae8cf18"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.database",
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.database",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4c17bd1486f71dc",
            "route_table_id": "rtb-0fa239cc15a268318",
            "subnet_id": "subnet-00fd074a4464fda4e"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06294b359d6286b35",
            "route_table_id": "rtb-0fa239cc15a268318",
            "subnet_id": "subnet-0939fe441ddee6169"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.private",
            "module.networking.module.vpc.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ea286901ab64ec3",
            "route_table_id": "rtb-02576314e0665d3eb",
            "subnet_id": "subnet-0b0b34ff065920482"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0950e15ffd69f2c86",
            "route_table_id": "rtb-02576314e0665d3eb",
            "subnet_id": "subnet-04f8a07840850a52d"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_route_table.public",
            "module.networking.module.vpc.aws_subnet.public",
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802803423954:subnet/subnet-0dc822966d95f4959",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.111.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc822966d95f4959",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "802803423954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "main-db-us-east-1a"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "main-db-us-east-1a"
            },
            "vpc_id": "vpc-05a72828468415e2d"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802803423954:subnet/subnet-0fe581f1deae8cf18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.222.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe581f1deae8cf18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "802803423954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "main-db-us-east-1b"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "main-db-us-east-1b"
            },
            "vpc_id": "vpc-05a72828468415e2d"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802803423954:subnet/subnet-00fd074a4464fda4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fd074a4464fda4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "802803423954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "main-private-us-east-1a"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "main-private-us-east-1a"
            },
            "vpc_id": "vpc-05a72828468415e2d"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802803423954:subnet/subnet-0939fe441ddee6169",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0939fe441ddee6169",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "802803423954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "main-private-us-east-1b"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "main-private-us-east-1b"
            },
            "vpc_id": "vpc-05a72828468415e2d"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802803423954:subnet/subnet-0b0b34ff065920482",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0b34ff065920482",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "802803423954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "main-public-us-east-1a"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "main-public-us-east-1a"
            },
            "vpc_id": "vpc-05a72828468415e2d"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802803423954:subnet/subnet-04f8a07840850a52d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f8a07840850a52d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "802803423954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DEV",
              "Name": "main-public-us-east-1b"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "main-public-us-east-1b"
            },
            "vpc_id": "vpc-05a72828468415e2d"
          },
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this",
            "module.networking.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802803423954:vpc/vpc-05a72828468415e2d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d4ef8232bf239e37",
            "default_route_table_id": "rtb-079150bef6144838f",
            "default_security_group_id": "sg-0e3477f78f0b2fdc9",
            "dhcp_options_id": "dopt-0e5e58a8046a32cde",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05a72828468415e2d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-079150bef6144838f",
            "owner_id": "802803423954",
            "tags": {
              "Environment": "DEV",
              "Name": "main"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "main"
            }
          }
        }
      ]
    },
    {
      "module": "module.security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802803423954:security-group/sg-0b99d8aa61756b48d",
            "description": "Allow Inbound HTTP Traffic via ALB",
            "egress": [],
            "id": "sg-0b99d8aa61756b48d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb_sg",
            "name_prefix": "",
            "owner_id": "802803423954",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05a72828468415e2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802803423954:security-group/sg-073c412976640ef3d",
            "description": "Allow SSH Inbound Traffic From my IP",
            "egress": [],
            "id": "sg-073c412976640ef3d",
            "ingress": [
              {
                "cidr_blocks": [
                  "65.186.13.143/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "802803423954",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05a72828468415e2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.access_ip.data.external.myipaddr",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802803423954:security-group/sg-019acc6c5899b565e",
            "description": "Allow MySQL Port Inbound Traffic from Backend App Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-019acc6c5899b565e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0972491a9e743ca5a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "data_sg",
            "name_prefix": "",
            "owner_id": "802803423954",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05a72828468415e2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.access_ip.data.external.myipaddr",
            "module.networking.module.vpc.aws_vpc.this",
            "module.security-groups.aws_security_group.alb_sg",
            "module.security-groups.aws_security_group.bastion_sg",
            "module.security-groups.aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security-groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802803423954:security-group/sg-0972491a9e743ca5a",
            "description": "Allow Inbound HTTP from ALB, and SSH inbound traffic from Bastion",
            "egress": [],
            "id": "sg-0972491a9e743ca5a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-073c412976640ef3d"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b99d8aa61756b48d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "802803423954",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05a72828468415e2d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.access_ip.data.external.myipaddr",
            "module.networking.module.vpc.aws_vpc.this",
            "module.security-groups.aws_security_group.alb_sg",
            "module.security-groups.aws_security_group.bastion_sg"
          ]
        }
      ]
    }
  ]
}